fix spacing of tagline

--- a/themes/hugo-ivy/static/css/style.css
+++ b/themes/hugo-ivy/static/css/style.css
@@ -213,7 +213,7 @@ body {
 
 .masthead {
   width: 260px;
-  padding: 20px 40px 20px 10px;
+  padding: 20px 60px 20px 10px;
   float: left;
 }
 
